<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin"
    android:background="@color/background">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/buttons">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standard_margin">

            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="30dp"
                android:text="@string/input_data"
                android:textSize="@dimen/heading_size"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_light"
                android:gravity="center"/>

            <LinearLayout
                android:id="@+id/volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal"
                android:layout_below="@+id/heading">

                <EditText
                    android:id="@+id/milkInput"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:hint="@string/milk"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:background="@drawable/spinner_shape"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/litre"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal"
                android:layout_below="@id/volume">

                <EditText
                    android:id="@+id/fatInput"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:hint="@string/fat"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:background="@drawable/spinner_shape"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/percent"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginBottom="@dimen/small_margin"
                android:orientation="horizontal"
                android:layout_below="@id/fat">

                <EditText
                    android:id="@+id/weightInput"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:hint="@string/weight"
                    android:textColorHint="@android:color/darker_gray"
                    android:textColor="@android:color/black"
                    android:background="@drawable/spinner_shape"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/kg"
                    android:textSize="@dimen/normal_text_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <Button
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_below="@id/weight"
                android:text="@string/default_date"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size"
                android:background="@drawable/spinner_shape"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="@dimen/standard_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:enabled="false"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="5dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/save_button_shape"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/closeButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:background="@drawable/close_button_shape"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</RelativeLayout>