<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/settingsHeading"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/functionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/settings_description"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="@dimen/standard_margin"
        android:layout_below="@id/functionDescription"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_action_build"/>

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/startButton"
        android:textColor="@android:color/holo_red_dark"
        android:background="@drawable/borderless_button_shape"/>
</RelativeLayout>